--- a/.github/workflows/updateAOCBadges.yml
+++ b/.github/workflows/updateAOCBadges.yml
@@ -1,7 +1,7 @@
 name: Update AoC Badges
 on:
   schedule:
-    - cron: '6 5 1-25 12 *'
+    - cron: '8 3 1-25 12 *' # At 03:08 on every day from 1 through 25 in December. (avoid load at full hours)
   workflow_dispatch:
 
 jobs:
